--- a/AlgorithmGossip/PascalTriangle.htm
+++ b/AlgorithmGossip/PascalTriangle.htm
@@ -33,7 +33,7 @@
   
   
   
-  <meta content="text/html; charset=Big5" http-equiv="content-type">
+  <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 
 
 
@@ -44,7 +44,7 @@
   
   
   
-  <title>¤Ú´µ¥d¤T¨¤§Î</title>
+  <title>å·´æ–¯å¡ä¸‰è§’å½¢</title>
 </head>
 
 
@@ -61,29 +61,29 @@ Gossip@caterpillar</a></h3>
 
 
 
-<h1><a href="AlgorithmGossip.htm">Algorithm Gossip:&nbsp;¤Ú´µ¥d¤T¨¤§Î</a></h1>
+<h1><a href="AlgorithmGossip.htm">Algorithm Gossip:&nbsp;å·´æ–¯å¡ä¸‰è§’å½¢</a></h1>
 
 
 
 
 
-¤Ú´µ¥d¡]Pascal¡^¤T¨¤§Î°ò¥»¤W´N¬O¦b¸Ñ nCr ¡A¦]¬°¤T¨¤§Î¤Wªº¨C¤@­Ó¼Æ¦r¦U¹ïÀ³¤@­Ón<big>C</big>r¡A¨ä¤¤ n ¬° row¡A¦Ó r ¬° column¡A¦p¤U¡G<br>
+å·´æ–¯å¡ï¼ˆPascalï¼‰ä¸‰è§’å½¢åŸºæœ¬ä¸Šå°±æ˜¯åœ¨è§£ nCr ï¼Œå› ç‚ºä¸‰è§’å½¢ä¸Šçš„æ¯ä¸€å€‹æ•¸å­—å„å°æ‡‰ä¸€å€‹n<big>C</big>rï¼Œå…¶ä¸­ n ç‚º rowï¼Œè€Œ r ç‚º columnï¼Œå¦‚ä¸‹ï¼š<br>
 
 
 
-¡@¡@¡@¡@0<big>C</big>0<br>
+ã€€ã€€ã€€ã€€0<big>C</big>0<br>
 
 
 
-¡@¡@¡@1<big>C</big>0 1<big>C</big>1<br>
+ã€€ã€€ã€€1<big>C</big>0 1<big>C</big>1<br>
 
 
 
-¡@¡@2<big>C</big>0 2<big>C</big>1 2<big>C</big>2<br>
+ã€€ã€€2<big>C</big>0 2<big>C</big>1 2<big>C</big>2<br>
 
 
 
-¡@3<big>C</big>0 3<big>C</big>1 3<big>C</big>2 3<big>C</big>3<br>
+ã€€3<big>C</big>0 3<big>C</big>1 3<big>C</big>2 3<big>C</big>3<br>
 
 
 
@@ -95,13 +95,13 @@ Gossip@caterpillar</a></h3>
 
 
 
-¹ïÀ³ªº¼Æ¾Ú¦p¤U¹Ï©Ò¥Ü¡G <br>
+å°æ‡‰çš„æ•¸æ“šå¦‚ä¸‹åœ–æ‰€ç¤ºï¼š <br>
 
 
 
 
 
-<div style="text-align: center;"><img style="width: 500px; height: 307px;" alt="¤Ú´µ¥d¤T¨¤" title="¤Ú´µ¥d¤T¨¤" src="images/pascal.jpg"><br>
+<div style="text-align: center;"><img style="width: 500px; height: 307px;" alt="å·´æ–¯å¡ä¸‰è§’" title="å·´æ–¯å¡ä¸‰è§’" src="images/pascal.jpg"><br>
 
 
 
@@ -110,7 +110,7 @@ Gossip@caterpillar</a></h3>
 
 
 <div style="text-align: left;">
-<h2>&nbsp;¸Ñªk</h2>
+<h2>&nbsp;è§£æ³•</h2>
 
 
 
@@ -122,7 +122,7 @@ Gossip@caterpillar</a></h3>
 
 
 
-<div style="text-align: left;">¤Ú´µ¥d¤T¨¤§Î¤¤ªº nCr ¥i¥H¨Ï¥Î¥H¤U³o­Ó¤½¦¡¨Ó­pºâ¡A¥HÁ×§K¶¥­¼¹Bºâ®Éªº¼Æ­È·¸¦ì¡G<br>
+<div style="text-align: left;">å·´æ–¯å¡ä¸‰è§’å½¢ä¸­çš„ nCr å¯ä»¥ä½¿ç”¨ä»¥ä¸‹é€™å€‹å…¬å¼ä¾†è¨ˆç®—ï¼Œä»¥é¿å…éšä¹˜é‹ç®—æ™‚çš„æ•¸å€¼æº¢ä½ï¼š<br>
 
 
 
@@ -146,7 +146,7 @@ n<big><big>C</big></big>0 = 1&nbsp;</div>
 
 
 
-<h2> ºtºâªk</h2>
+<h2> æ¼”ç®—æ³•</h2>
 
 
 
@@ -156,7 +156,7 @@ n<big><big>C</big></big>0 = 1&nbsp;</div>
 
 
 
-<pre>/* ­pºânCr¡A¦ı¬O¨Ã¤£§Ö¡A¥u¬O¤è«K */<br>Procedure COMBI(n, r) [<br>    FOR(i = 1; i &lt;= r; i = i + 1)<br>        p = p * (n-i+1) / i;<br><br>    RETURN p;<br>] <br></pre>
+<pre>/* è¨ˆç®—nCrï¼Œä½†æ˜¯ä¸¦ä¸å¿«ï¼Œåªæ˜¯æ–¹ä¾¿ */<br>Procedure COMBI(n, r) [<br>    FOR(i = 1; i &lt;= r; i = i + 1)<br>        p = p * (n-i+1) / i;<br><br>    RETURN p;<br>] <br></pre>
 
 
 
@@ -164,9 +164,9 @@ n<big><big>C</big></big>0 = 1&nbsp;</div>
 
 
 
-¸Ñ¨M n<big>C</big>r ªººâªk¤§«á¡A³Ñ¤Uªº´N¬O¦p¦ó±N³o¨Ç¼Æ¦r±Æª©¦¨¤T¨¤§Îªº°İÃD¤F¡A³o´N­n¬İ±z¬O¦p¦óÅã¥Ü¦¨ªGªº¤F¡A¤U­±ªºµ{¦¡±N¤À§O¥Ü½d¤å¦r¼Ò¦¡¡]C¹ê§@¡^»Pµøµ¡¼Ò¦¡¡]Java¹ê§@¡^ªº¸Ñªk¡C
+è§£æ±º n<big>C</big>r çš„ç®—æ³•ä¹‹å¾Œï¼Œå‰©ä¸‹çš„å°±æ˜¯å¦‚ä½•å°‡é€™äº›æ•¸å­—æ’ç‰ˆæˆä¸‰è§’å½¢çš„å•é¡Œäº†ï¼Œé€™å°±è¦çœ‹æ‚¨æ˜¯å¦‚ä½•é¡¯ç¤ºæˆæœçš„äº†ï¼Œä¸‹é¢çš„ç¨‹å¼å°‡åˆ†åˆ¥ç¤ºç¯„æ–‡å­—æ¨¡å¼ï¼ˆCå¯¦ä½œï¼‰èˆ‡è¦–çª—æ¨¡å¼ï¼ˆJavaå¯¦ä½œï¼‰çš„è§£æ³•ã€‚
 
-<h2> ¹ê§@</h2>
+<h2> å¯¦ä½œ</h2>
 
 
 
@@ -186,7 +186,7 @@ n<big><big>C</big></big>0 = 1&nbsp;</div>
 
 
 
-<pre>#include &lt;stdio.h&gt;<br>#define N 12<br><br>long combi(int n, int r){<br>    int i;<br>    long p = 1;<br><br>    for(i = 1; i &lt;= r; i++)<br>        p = p * (n-i+1) / i;<br><br>    return p;<br>}<br><br>void paint() {<br>    int n, r, t;<br><br>    for(n = 0; n &lt;= N; n++) {<br>        for(r = 0; r &lt;= n; r++) {<br>            int i;<br>            /* ±Æª©³]©w¶}©l */<br>            if(r == 0) {  <br>                for(i = 0; i &lt;= (N-n); i++) {<br>                    printf("   ");<br>                }<br>            }<br>            else {<br>                printf("   ");<br>            } /* ±Æª©³]©wµ²§ô */<br><br>            printf("%3d", combi(n, r));<br>        }<br>        printf("\n");<br>    }<br>}<br><br>int main() {<br>    paint();<br>    return 0;<br>} <br></pre>
+<pre>#include &lt;stdio.h&gt;<br>#define N 12<br><br>long combi(int n, int r){<br>    int i;<br>    long p = 1;<br><br>    for(i = 1; i &lt;= r; i++)<br>        p = p * (n-i+1) / i;<br><br>    return p;<br>}<br><br>void paint() {<br>    int n, r, t;<br><br>    for(n = 0; n &lt;= N; n++) {<br>        for(r = 0; r &lt;= n; r++) {<br>            int i;<br>            /* æ’ç‰ˆè¨­å®šé–‹å§‹ */<br>            if(r == 0) {  <br>                for(i = 0; i &lt;= (N-n); i++) {<br>                    printf("   ");<br>                }<br>            }<br>            else {<br>                printf("   ");<br>            } /* æ’ç‰ˆè¨­å®šçµæŸ */<br><br>            printf("%3d", combi(n, r));<br>        }<br>        printf("\n");<br>    }<br>}<br><br>int main() {<br>    paint();<br>    return 0;<br>} <br></pre>
 
 
 
@@ -210,7 +210,7 @@ n<big><big>C</big></big>0 = 1&nbsp;</div>
 
 
 
-<pre>import java.awt.*; <br>import javax.swing.*; <br><br>public class Pascal extends JFrame { <br>    public Pascal() { <br>        setBackground(Color.white); <br>        setTitle("¤Ú´µ¥d¤T¨¤§Î"); <br>        setSize(520, 350); <br>        setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE); <br>        show(); <br>    } <br><br>    private long combi(int n, int r){ <br>        int i; <br>        long p = 1; <br><br>        for(i = 1; i &lt;= r; i++) <br>            p = p * (n-i+1) / i; <br>  <br>        return p; <br>    } <br><br>    public void paint(Graphics g) { <br>        final int N = 12; <br>        int n, r, t; <br><br>        for(n = 0; n &lt;= N; n++) { <br>            for(r = 0; r &lt;= n; r++) <br>                g.drawString(" " + combi(n, r), <br>                    (N-n)*20 + r * 40, n * 20 + 50); <br>        } <br>    } <br><br>    public static void main(String args[]) { <br>        Pascal frm = new Pascal(); <br>    } <br>}</pre>
+<pre>import java.awt.*; <br>import javax.swing.*; <br><br>public class Pascal extends JFrame { <br>    public Pascal() { <br>        setBackground(Color.white); <br>        setTitle("å·´æ–¯å¡ä¸‰è§’å½¢"); <br>        setSize(520, 350); <br>        setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE); <br>        show(); <br>    } <br><br>    private long combi(int n, int r){ <br>        int i; <br>        long p = 1; <br><br>        for(i = 1; i &lt;= r; i++) <br>            p = p * (n-i+1) / i; <br>  <br>        return p; <br>    } <br><br>    public void paint(Graphics g) { <br>        final int N = 12; <br>        int n, r, t; <br><br>        for(n = 0; n &lt;= N; n++) { <br>            for(r = 0; r &lt;= n; r++) <br>                g.drawString(" " + combi(n, r), <br>                    (N-n)*20 + r * 40, n * 20 + 50); <br>        } <br>    } <br><br>    public static void main(String args[]) { <br>        Pascal frm = new Pascal(); <br>    } <br>}</pre>
 
 
 
