--- a/AlgorithmGossip/template.html
+++ b/AlgorithmGossip/template.html
@@ -21,14 +21,14 @@
   
   
   
-  <meta content="text/html; charset=Big5" http-equiv="content-type">
+  <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 
 
 
   
   
   
-  <title>範本</title>
+  <title>翻d瞼罈</title>
 </head>
 
 
@@ -41,7 +41,7 @@ Gossip@caterpillar</a></h3>
 
 
 
-<h1><a href="AlgorithmGossip.htm">Algorithm Gossip: 範本</a></h1>
+<h1><a href="AlgorithmGossip.htm">Algorithm Gossip: 翻d瞼罈</a></h1>
 
 
 
