--- a/AlgorithmGossip/TwoNOneArray.htm
+++ b/AlgorithmGossip/TwoNOneArray.htm
@@ -27,7 +27,7 @@
   
   
   
-  <meta content="text/html; charset=Big5" http-equiv="content-type">
+  <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 
 
 
@@ -36,7 +36,7 @@
   
   
   
-  <title>2(2N+1) Å]¤è°}</title>
+  <title>2(2N+1) é­”æ–¹é™£</title>
 </head>
 
 
@@ -51,41 +51,41 @@ Gossip@caterpillar</a></h3>
 
 
 
-<h1><a href="AlgorithmGossip.htm">Algorithm Gossip:&nbsp;2(2N+1) Å]¤è°}</a></h1>
+<h1><a href="AlgorithmGossip.htm">Algorithm Gossip:&nbsp;2(2N+1) é­”æ–¹é™£</a></h1>
 
 
 
 
-<h2>»¡©ú</h2>
-¤è°}ªººû«×¾ãÅé¨Ó¬İ¬O°¸¼Æ¡A¦ı¬O¨ä¹ê¬O¤@­Ó©_¼Æ­¼¥H¤@­Ó°¸¼Æ¡A¨Ò¦p6X6¡A¨ä¤¤6=2X3¡A§Ú­Ì¤]ºÙ³oºØ¤è°}»P³æ°¸¼Æ¤è°}¡C<br>
-<h2>¸Ñªk</h2>
-¦pªG±z·|¸Ñ©_¼ÆÅ]³N¤è°}¡A­n¸Ñ³oºØ¤è°}¤]´N¤£Ãø²z¸Ñ¡A­º¥ı§Ú­Ì¥On=2(2m+1)¡A¨Ã±N¾ã­Ó¤è°}¬İ§@¬O¼Æ­Ó©_¼Æ¤è°}ªº²Õ¦X¡A¦p¤U©Ò¥Ü¡G <br>
+<h2>èªªæ˜</h2>
+æ–¹é™£çš„ç¶­åº¦æ•´é«”ä¾†çœ‹æ˜¯å¶æ•¸ï¼Œä½†æ˜¯å…¶å¯¦æ˜¯ä¸€å€‹å¥‡æ•¸ä¹˜ä»¥ä¸€å€‹å¶æ•¸ï¼Œä¾‹å¦‚6X6ï¼Œå…¶ä¸­6=2X3ï¼Œæˆ‘å€‘ä¹Ÿç¨±é€™ç¨®æ–¹é™£èˆ‡å–®å¶æ•¸æ–¹é™£ã€‚<br>
+<h2>è§£æ³•</h2>
+å¦‚æœæ‚¨æœƒè§£å¥‡æ•¸é­”è¡“æ–¹é™£ï¼Œè¦è§£é€™ç¨®æ–¹é™£ä¹Ÿå°±ä¸é›£ç†è§£ï¼Œé¦–å…ˆæˆ‘å€‘ä»¤n=2(2m+1)ï¼Œä¸¦å°‡æ•´å€‹æ–¹é™£çœ‹ä½œæ˜¯æ•¸å€‹å¥‡æ•¸æ–¹é™£çš„çµ„åˆï¼Œå¦‚ä¸‹æ‰€ç¤ºï¼š <br>
 
-<div style="text-align: center;"><img style="width: 393px; height: 236px;" alt="2(2N+1)Å]¤è°}" title="2(2N+1)Å]¤è°}" src="images/twoNOneArray-1.jpg"><br>
+<div style="text-align: center;"><img style="width: 393px; height: 236px;" alt="2(2N+1)é­”æ–¹é™£" title="2(2N+1)é­”æ–¹é™£" src="images/twoNOneArray-1.jpg"><br>
 </div>
 <br>
-­º¥ı¨Ì§Ç±NA¡BB¡BC¡BD¥|­Ó¦ì¸m¡A¨Ì©_¼Æ¤è°}ªº³W«h¶ñ¤J¼Æ¦r¡A¶ñ§¹¤§«á¡A¤è°}¤¤¦U¦æªº©M´N¬Û¦P¤F¡A¦ı¦C»P¹ï¨¤½u«h§_¡A¦¹®É¥²¶·¦bA-D»PC- B¤§¶¡¡A§@¤@¨Ç¹ïÀ³ªº½Õ´«¡A³W«h¦p¤U¡G<br>
+é¦–å…ˆä¾åºå°‡Aã€Bã€Cã€Då››å€‹ä½ç½®ï¼Œä¾å¥‡æ•¸æ–¹é™£çš„è¦å‰‡å¡«å…¥æ•¸å­—ï¼Œå¡«å®Œä¹‹å¾Œï¼Œæ–¹é™£ä¸­å„è¡Œçš„å’Œå°±ç›¸åŒäº†ï¼Œä½†åˆ—èˆ‡å°è§’ç·šå‰‡å¦ï¼Œæ­¤æ™‚å¿…é ˆåœ¨A-Dèˆ‡C- Bä¹‹é–“ï¼Œä½œä¸€äº›å°æ‡‰çš„èª¿æ›ï¼Œè¦å‰‡å¦‚ä¸‹ï¼š<br>
 <ol>
-  <li>±NA¤¤¨C¤@¦C(¤¤¶¡¦C°£¥~)ªºÀYm­Ó¤¸¯À¡A»PD¤¤¹ïÀ³¦ì¸mªº¤¸¯À½Õ´«¡C</li>
-  <li>±NAªº¤¤¥¡¦C¡B¤¤¥¡¨º¤@®æ¦V¥ª¨úm®æ¡A¨Ã»PD¤¤¹ïÀ³¦ì¸m¹ï½Õ</li>
-  <li>±NC¤¤¨C¤@¦Cªº­Ë¼Æm-1­Ó¤¸¯À¡A»PB¤¤¹ïÀ³ªº¤¸¯À¹ï½Õ</li>
+  <li>å°‡Aä¸­æ¯ä¸€åˆ—(ä¸­é–“åˆ—é™¤å¤–)çš„é ­må€‹å…ƒç´ ï¼Œèˆ‡Dä¸­å°æ‡‰ä½ç½®çš„å…ƒç´ èª¿æ›ã€‚</li>
+  <li>å°‡Açš„ä¸­å¤®åˆ—ã€ä¸­å¤®é‚£ä¸€æ ¼å‘å·¦å–mæ ¼ï¼Œä¸¦èˆ‡Dä¸­å°æ‡‰ä½ç½®å°èª¿</li>
+  <li>å°‡Cä¸­æ¯ä¸€åˆ—çš„å€’æ•¸m-1å€‹å…ƒç´ ï¼Œèˆ‡Bä¸­å°æ‡‰çš„å…ƒç´ å°èª¿</li>
 </ol>
 <br>
-Á|­Ó¹ê¨Ò¨Ó»¡¡A¦p¦ó¶ñ6X6¤è°}¡A§Ú­Ì­º¥ı±N¤§¤À¸Ñ¬°©_¼Æ¤è°}¡A¨Ã¶ñ¤J¼Æ¦r¡A¦p¤U©Ò¥Ü¡G <br>
-<div style="text-align: center;"><img style="width: 202px; height: 258px;" alt="2(2N+1)Å]¤è°}" title="2(2N+1)Å]¤è°}" src="images/twoNOneArray-2.jpg"></div>
+èˆ‰å€‹å¯¦ä¾‹ä¾†èªªï¼Œå¦‚ä½•å¡«6X6æ–¹é™£ï¼Œæˆ‘å€‘é¦–å…ˆå°‡ä¹‹åˆ†è§£ç‚ºå¥‡æ•¸æ–¹é™£ï¼Œä¸¦å¡«å…¥æ•¸å­—ï¼Œå¦‚ä¸‹æ‰€ç¤ºï¼š <br>
+<div style="text-align: center;"><img style="width: 202px; height: 258px;" alt="2(2N+1)é­”æ–¹é™£" title="2(2N+1)é­”æ–¹é™£" src="images/twoNOneArray-2.jpg"></div>
 <br>
-±µ¤U¨Ó¶i¦æ¤¬´«ªº°Ê§@¡A¤¬´«ªº¤¸¯À¥H¤£¦PÃC¦â¼Ğ¥Ü¡A¦p¤U¡G<br>
-<div style="text-align: center;"><img style="width: 194px; height: 192px;" alt="2(2N+1)Å]¤è°}" title="2(2N+1)Å]¤è°}" src="images/twoNOneArray-3.jpg"></div>
+æ¥ä¸‹ä¾†é€²è¡Œäº’æ›çš„å‹•ä½œï¼Œäº’æ›çš„å…ƒç´ ä»¥ä¸åŒé¡è‰²æ¨™ç¤ºï¼Œå¦‚ä¸‹ï¼š<br>
+<div style="text-align: center;"><img style="width: 194px; height: 192px;" alt="2(2N+1)é­”æ–¹é™£" title="2(2N+1)é­”æ–¹é™£" src="images/twoNOneArray-3.jpg"></div>
 <br>
-¥Ñ©óm-1ªº¼Æ¬°0¡A©Ò¥H¦b³o­Ó¨Ò¤l¤¤¡AC-B³¡¥÷¨Ã¤£¥Î¶i¦æ¹ï½Õ¡C<br>
-<h2> ¹ê§@</h2>
+ç”±æ–¼m-1çš„æ•¸ç‚º0ï¼Œæ‰€ä»¥åœ¨é€™å€‹ä¾‹å­ä¸­ï¼ŒC-Béƒ¨ä»½ä¸¦ä¸ç”¨é€²è¡Œå°èª¿ã€‚<br>
+<h2> å¯¦ä½œ</h2>
 
 <ul>
   <li> C
   </li>
 </ul>
 
-<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br><br>#define N 6 <br>#define SWAP(x,y) {int t; t = x; x = y; y = t;} <br><br>void magic_o(int [][N], int); <br>void exchange(int [][N], int); <br><br>int main(void) { <br>    int square[N][N] = {0}; <br>    int i, j; <br><br>    magic_o(square, N/2); <br>    exchange(square, N); <br><br>    for(i = 0; i &lt; N; i++) { <br>        for(j = 0; j &lt; N; j++) <br>            printf("%2d ", square[i][j]); <br>        printf("\n"); <br>    } <br><br>    return 0; <br>} <br><br>void magic_o(int square[][N], int n) { <br>    int count, row, column; <br><br>    row = 0; <br>    column = n / 2; <br><br>    for(count = 1; count &lt;= n*n; count++) { <br>        square[row][column] = count;            // ¶ñA <br>        square[row+n][column+n] = count + n*n;  // ¶ñB <br>        square[row][column+n] = count + 2*n*n;  // ¶ñC <br>        square[row+n][column] = count + 3*n*n;  // ¶ñD <br>        if(count % n == 0) <br>            row++; <br>        else { <br>            row = (row == 0) ? n - 1 : row - 1 ; <br>            column = (column == n-1) ? 0 : column + 1; <br>        } <br>    } <br>} <br><br>void exchange(int x[][N], int n) { <br>    int i, j; <br>    int m = n / 4; <br>    int m1 = m - 1; <br><br>    for(i = 0; i &lt; n/2; i++) { <br>        if(i != m)  {    <br>            for(j = 0; j &lt; m; j++)          // ³B²z³W«h 1 <br>                SWAP(x[i][j], x[n/2+i][j]); <br>            for(j = 0; j &lt; m1; j++)         // ³B²z³W«h 2 <br>                SWAP(x[i][n-1-j], x[n/2+i][n-1-j]); <br>        } <br>        else {  // ³B²z³W«h 3 <br>            for(j = 1; j &lt;= m; j++) <br>                SWAP(x[m][j], x[n/2+m][j]); <br>            for(j = 0; j &lt; m1; j++) <br>                SWAP(x[m][n-1-j], x[n/2+m][n-1-j]); <br>        } <br>    } <br>} <br></pre>
+<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br><br>#define N 6 <br>#define SWAP(x,y) {int t; t = x; x = y; y = t;} <br><br>void magic_o(int [][N], int); <br>void exchange(int [][N], int); <br><br>int main(void) { <br>    int square[N][N] = {0}; <br>    int i, j; <br><br>    magic_o(square, N/2); <br>    exchange(square, N); <br><br>    for(i = 0; i &lt; N; i++) { <br>        for(j = 0; j &lt; N; j++) <br>            printf("%2d ", square[i][j]); <br>        printf("\n"); <br>    } <br><br>    return 0; <br>} <br><br>void magic_o(int square[][N], int n) { <br>    int count, row, column; <br><br>    row = 0; <br>    column = n / 2; <br><br>    for(count = 1; count &lt;= n*n; count++) { <br>        square[row][column] = count;            // å¡«A <br>        square[row+n][column+n] = count + n*n;  // å¡«B <br>        square[row][column+n] = count + 2*n*n;  // å¡«C <br>        square[row+n][column] = count + 3*n*n;  // å¡«D <br>        if(count % n == 0) <br>            row++; <br>        else { <br>            row = (row == 0) ? n - 1 : row - 1 ; <br>            column = (column == n-1) ? 0 : column + 1; <br>        } <br>    } <br>} <br><br>void exchange(int x[][N], int n) { <br>    int i, j; <br>    int m = n / 4; <br>    int m1 = m - 1; <br><br>    for(i = 0; i &lt; n/2; i++) { <br>        if(i != m)  {    <br>            for(j = 0; j &lt; m; j++)          // è™•ç†è¦å‰‡ 1 <br>                SWAP(x[i][j], x[n/2+i][j]); <br>            for(j = 0; j &lt; m1; j++)         // è™•ç†è¦å‰‡ 2 <br>                SWAP(x[i][n-1-j], x[n/2+i][n-1-j]); <br>        } <br>        else {  // è™•ç†è¦å‰‡ 3 <br>            for(j = 1; j &lt;= m; j++) <br>                SWAP(x[m][j], x[n/2+m][j]); <br>            for(j = 0; j &lt; m1; j++) <br>                SWAP(x[m][n-1-j], x[n/2+m][n-1-j]); <br>        } <br>    } <br>} <br></pre>
 
 <br>
 
@@ -94,7 +94,7 @@ Gossip@caterpillar</a></h3>
   </li>
 </ul>
 
-<pre>public class Matrix {<br>    public static int[][] magic22mp1(int n) {<br>        int[][] square = new int[n][n]; <br><br>        magic_o(square, n/2); <br>        exchange(square, n);         <br>        <br>        return square;<br>    }<br>    <br>    private static void magic_o(int[][] square, int n) {<br>        int row = 0; <br>        int column = n / 2; <br><br>        for(int count = 1; count &lt;= n*n; count++) { <br>            square[row][column] = count;            // ¶ñA <br>            square[row+n][column+n] = count + n*n;  // ¶ñB <br>            square[row][column+n] = count + 2*n*n;  // ¶ñC <br>            square[row+n][column] = count + 3*n*n;  // ¶ñD <br>            if(count % n == 0) <br>                row++; <br>            else { <br>                row = (row == 0) ? n - 1 : row - 1 ; <br>                column = (column == n-1) ? 0 : column + 1; <br>            } <br>        }<br>    }<br>    <br>    private static void exchange(int[][] x, int n) {<br>        int i, j; <br>        int m = n / 4; <br>        int m1 = m - 1; <br><br>        for(i = 0; i &lt; n/2; i++) { <br>            if(i != m)  {    <br>                for(j = 0; j &lt; m; j++)          // ³B²z³W«h 1 <br>                    swap(x, i, j, n/2+i, j); <br>                for(j = 0; j &lt; m1; j++)         // ³B²z³W«h 2 <br>                    swap(x, i, n-1-j, n/2+i, n-1-j); <br>            } <br>            else {  // ³B²z³W«h 3 <br>                for(j = 1; j &lt;= m; j++) <br>                    swap(x, m, j, n/2+m, j); <br>                for(j = 0; j &lt; m1; j++) <br>                    swap(x, m, n-1-j, n/2+m, n-1-j); <br>            } <br>        } <br>    }<br>    <br>    private static void swap(int[][] number,<br>                                int i, int j, int k, int l) {<br>        int t; <br>        t = number[i][j]; <br>        number[i][j] = number[k][l]; <br>        number[k][l] = t;<br>    }<br>    <br>    public static void main(String[] args) {<br>        int[][] magic = Matrix.magic22mp1(6);<br>        <br>        for(int k = 0; k &lt; magic.length; k++) {<br>            for(int l = 0; l &lt; magic[0].length; l++) {<br>                System.out.print(magic[k][l] + " ");<br>            }<br>            System.out.println();<br>         }<br>    }<br>} </pre>
+<pre>public class Matrix {<br>    public static int[][] magic22mp1(int n) {<br>        int[][] square = new int[n][n]; <br><br>        magic_o(square, n/2); <br>        exchange(square, n);         <br>        <br>        return square;<br>    }<br>    <br>    private static void magic_o(int[][] square, int n) {<br>        int row = 0; <br>        int column = n / 2; <br><br>        for(int count = 1; count &lt;= n*n; count++) { <br>            square[row][column] = count;            // å¡«A <br>            square[row+n][column+n] = count + n*n;  // å¡«B <br>            square[row][column+n] = count + 2*n*n;  // å¡«C <br>            square[row+n][column] = count + 3*n*n;  // å¡«D <br>            if(count % n == 0) <br>                row++; <br>            else { <br>                row = (row == 0) ? n - 1 : row - 1 ; <br>                column = (column == n-1) ? 0 : column + 1; <br>            } <br>        }<br>    }<br>    <br>    private static void exchange(int[][] x, int n) {<br>        int i, j; <br>        int m = n / 4; <br>        int m1 = m - 1; <br><br>        for(i = 0; i &lt; n/2; i++) { <br>            if(i != m)  {    <br>                for(j = 0; j &lt; m; j++)          // è™•ç†è¦å‰‡ 1 <br>                    swap(x, i, j, n/2+i, j); <br>                for(j = 0; j &lt; m1; j++)         // è™•ç†è¦å‰‡ 2 <br>                    swap(x, i, n-1-j, n/2+i, n-1-j); <br>            } <br>            else {  // è™•ç†è¦å‰‡ 3 <br>                for(j = 1; j &lt;= m; j++) <br>                    swap(x, m, j, n/2+m, j); <br>                for(j = 0; j &lt; m1; j++) <br>                    swap(x, m, n-1-j, n/2+m, n-1-j); <br>            } <br>        } <br>    }<br>    <br>    private static void swap(int[][] number,<br>                                int i, int j, int k, int l) {<br>        int t; <br>        t = number[i][j]; <br>        number[i][j] = number[k][l]; <br>        number[k][l] = t;<br>    }<br>    <br>    public static void main(String[] args) {<br>        int[][] magic = Matrix.magic22mp1(6);<br>        <br>        for(int k = 0; k &lt; magic.length; k++) {<br>            for(int l = 0; l &lt; magic[0].length; l++) {<br>                System.out.print(magic[k][l] + " ");<br>            }<br>            System.out.println();<br>         }<br>    }<br>} </pre>
 <br>
 <br>
 
