--- a/AlgorithmGossip/TriangleArray.htm
+++ b/AlgorithmGossip/TriangleArray.htm
@@ -33,7 +33,7 @@
   
   
   
-  <meta content="text/html; charset=Big5" http-equiv="content-type">
+  <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 
 
 
@@ -44,7 +44,7 @@
   
   
   
-  <title>¤W¤T¨¤¡B¤U¤T¨¤¡B¹ïºÙ¯x°}</title>
+  <title>ä¸Šä¸‰è§’ã€ä¸‹ä¸‰è§’ã€å°ç¨±çŸ©é™£</title>
 </head>
 
 
@@ -61,15 +61,15 @@ Gossip@caterpillar</a></h3>
 
 
 
-<h1><a href="AlgorithmGossip.htm">Algorithm Gossip: ¤W¤T¨¤¡B¤U¤T¨¤¡B¹ïºÙ¯x°}</a></h1>
+<h1><a href="AlgorithmGossip.htm">Algorithm Gossip: ä¸Šä¸‰è§’ã€ä¸‹ä¸‰è§’ã€å°ç¨±çŸ©é™£</a></h1>
 
 
 
 
 
-<h2>»¡©ú</h2>
+<h2>èªªæ˜</h2>
 
-¤W¤T¨¤¯x°}¬O¯x°}¦b¹ï¨¤½u¥H¤Uªº¤¸¯À§¡¬°0¡A§YA<sub>ij</sub> = 0¡Ai &gt; j¡A¨Ò¦p¡G<br>
+ä¸Šä¸‰è§’çŸ©é™£æ˜¯çŸ©é™£åœ¨å°è§’ç·šä»¥ä¸‹çš„å…ƒç´ å‡ç‚º0ï¼Œå³A<sub>ij</sub> = 0ï¼Œi &gt; jï¼Œä¾‹å¦‚ï¼š<br>
 
 <div style="margin-left: 40px;"><span style="font-weight: bold; font-family: Courier New,Courier,monospace;">1&nbsp;&nbsp; 2&nbsp;&nbsp; 3&nbsp;&nbsp; &nbsp; 4&nbsp;&nbsp;&nbsp; 5 </span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
 
@@ -85,7 +85,7 @@ Gossip@caterpillar</a></h3>
 
 <br>
 
-¤U¤T¨¤¯x°}¬O¯x°}¦b¹ï¨¤½u¥H¤Wªº¤¸¯À§¡¬°0¡A§YA<sub>ij </sub>= 0¡Ai &lt; j¡A¨Ò¦p¡G<br>
+ä¸‹ä¸‰è§’çŸ©é™£æ˜¯çŸ©é™£åœ¨å°è§’ç·šä»¥ä¸Šçš„å…ƒç´ å‡ç‚º0ï¼Œå³A<sub>ij </sub>= 0ï¼Œi &lt; jï¼Œä¾‹å¦‚ï¼š<br>
 
 <div style="margin-left: 40px;"><span style="font-weight: bold; font-family: Courier New,Courier,monospace;">&nbsp;1&nbsp;&nbsp; 0&nbsp;&nbsp; 0&nbsp;&nbsp; 0&nbsp;&nbsp; 0 </span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
 
@@ -101,7 +101,7 @@ Gossip@caterpillar</a></h3>
 
 <br>
 
-¹ïºÙ¯x°}¬O¯x°}¤¸¯À¹ïºÙ©ó¹ï¨¤½u¡A¨Ò¦p¡G<br>
+å°ç¨±çŸ©é™£æ˜¯çŸ©é™£å…ƒç´ å°ç¨±æ–¼å°è§’ç·šï¼Œä¾‹å¦‚ï¼š<br>
 
 <div style="margin-left: 40px;"><span style="font-weight: bold; font-family: Courier New,Courier,monospace;">&nbsp;1&nbsp;&nbsp; 2&nbsp;&nbsp; 3&nbsp;&nbsp; 4&nbsp;&nbsp; 5 </span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
 
@@ -117,11 +117,11 @@ Gossip@caterpillar</a></h3>
 
 <br>
 
-¤W¤T¨¤©Î¤U¤T¨¤¯x°}¤]¦³¤j³¡¥÷ªº¤¸¯À¤£Àx¦s­È¡]¬°0¡^¡A§Ú­Ì¥i¥H±N¥¦­Ì¨Ï¥Î¤@ºû°}¦C¨ÓÀx¦s¥H¸`¬ÙÀx¦sªÅ¶¡¡A¦Ó¹ïºÙ¯x°}¦]¬°¹ïºÙ©ó¹ï¨¤½u¡A©Ò¥H¥i¥Hµø¬°¤W¤T¨¤©Î¤U¤T¨¤¯x°}¨ÓÀx¦s¡C<br>
+ä¸Šä¸‰è§’æˆ–ä¸‹ä¸‰è§’çŸ©é™£ä¹Ÿæœ‰å¤§éƒ¨ä»½çš„å…ƒç´ ä¸å„²å­˜å€¼ï¼ˆç‚º0ï¼‰ï¼Œæˆ‘å€‘å¯ä»¥å°‡å®ƒå€‘ä½¿ç”¨ä¸€ç¶­é™£åˆ—ä¾†å„²å­˜ä»¥ç¯€çœå„²å­˜ç©ºé–“ï¼Œè€Œå°ç¨±çŸ©é™£å› ç‚ºå°ç¨±æ–¼å°è§’ç·šï¼Œæ‰€ä»¥å¯ä»¥è¦–ç‚ºä¸Šä¸‰è§’æˆ–ä¸‹ä¸‰è§’çŸ©é™£ä¾†å„²å­˜ã€‚<br>
 
-<h2>¸Ñªk</h2>
+<h2>è§£æ³•</h2>
 
-°²³]¯x°}¬°nxn¡A¬°¤F­pºâ¤è«K¡A§Ú­ÌÅı°}¦C¯Á¤Ş¥Ñ1¶}©l¡A¤W¤T¨¤¯x°}¤Æ¬°¤@ºû°}¦C¡A­Y¥H¦C¬°¥D¡A¨ä¤½¦¡¬°¡G<br>
+å‡è¨­çŸ©é™£ç‚ºnxnï¼Œç‚ºäº†è¨ˆç®—æ–¹ä¾¿ï¼Œæˆ‘å€‘è®“é™£åˆ—ç´¢å¼•ç”±1é–‹å§‹ï¼Œä¸Šä¸‰è§’çŸ©é™£åŒ–ç‚ºä¸€ç¶­é™£åˆ—ï¼Œè‹¥ä»¥åˆ—ç‚ºä¸»ï¼Œå…¶å…¬å¼ç‚ºï¼š<br>
 
 <div style="margin-left: 40px;"><span style="font-weight: bold; font-family: Courier New,Courier,monospace;">loc = n*(i-1) - i*(i-1)/2 + j</span><br>
 
@@ -129,7 +129,7 @@ Gossip@caterpillar</a></h3>
 
 <br>
 
-¤Æ¬°¥H¦æ¬°¥D¡A¨ä¤½¦¡¬°¡G<br>
+åŒ–ç‚ºä»¥è¡Œç‚ºä¸»ï¼Œå…¶å…¬å¼ç‚ºï¼š<br>
 
 <div style="margin-left: 40px;"><span style="font-weight: bold; font-family: Courier New,Courier,monospace;">loc = j*(j-1)/2 + i</span><br>
 
@@ -137,7 +137,7 @@ Gossip@caterpillar</a></h3>
 
 <br>
 
-¤U¤T¨¤¯x°}¤Æ¬°¤@ºû°}¦C¡A­Y¥H¦C¬°¥D¡A¨ä¤½¦¡¬°¡G<br>
+ä¸‹ä¸‰è§’çŸ©é™£åŒ–ç‚ºä¸€ç¶­é™£åˆ—ï¼Œè‹¥ä»¥åˆ—ç‚ºä¸»ï¼Œå…¶å…¬å¼ç‚ºï¼š<br>
 
 <div style="margin-left: 40px;"><span style="font-weight: bold; font-family: Courier New,Courier,monospace;">loc = i*(i-1)/2 + j</span><br>
 
@@ -145,7 +145,7 @@ Gossip@caterpillar</a></h3>
 
 <br>
 
-­Y¥H¦æ¬°¥D¡A¨ä¤½¦¡¬°¡G<br>
+è‹¥ä»¥è¡Œç‚ºä¸»ï¼Œå…¶å…¬å¼ç‚ºï¼š<br>
 
 <div style="margin-left: 40px;"><span style="font-weight: bold; font-family: Courier New,Courier,monospace;">loc = n*(j-1) - j*(j-1)/2 + i</span><br>
 
@@ -153,12 +153,12 @@ Gossip@caterpillar</a></h3>
 
 <br>
 
-¤½¦¡ªº¾ÉÃÒ¨ä¹ê¬O¥Ñµ¥®t¯Å¼Æ¤½¦¡±o¨ì¡A±z¥i¥H¦Û¦æÃ¸¹Ï¨Ã¬İ¬İ´N¥i¥H¾ÉÃÒ¥X¨Ó¡A¹ï©óC/C++©ÎJavaµ¥¯Á¤Ş¥Ñ0¶}©lªº»y¨¥¨Ó»¡¡A¥u­n±Ni»Pj¦U¥[1¡A¨D±oloc¤§«á´î1§Y¥i®M¥Î¥H¤Wªº¤½¦¡¡C <br>
+å…¬å¼çš„å°è­‰å…¶å¯¦æ˜¯ç”±ç­‰å·®ç´šæ•¸å…¬å¼å¾—åˆ°ï¼Œæ‚¨å¯ä»¥è‡ªè¡Œç¹ªåœ–ä¸¦çœ‹çœ‹å°±å¯ä»¥å°è­‰å‡ºä¾†ï¼Œå°æ–¼C/C++æˆ–Javaç­‰ç´¢å¼•ç”±0é–‹å§‹çš„èªè¨€ä¾†èªªï¼Œåªè¦å°‡ièˆ‡jå„åŠ 1ï¼Œæ±‚å¾—locä¹‹å¾Œæ¸›1å³å¯å¥—ç”¨ä»¥ä¸Šçš„å…¬å¼ã€‚ <br>
 
 
 <br>
 
-<h2> ¹ê§@</h2>
+<h2> å¯¦ä½œ</h2>
 
 
 <ul>
@@ -169,7 +169,7 @@ Gossip@caterpillar</a></h3>
 </ul>
 
 
-<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br>#define N 5 <br><br>int main(void) { <br>    int arr1[N][N] = { <br>        {1, 2, 3,  4,   5}, <br>        {0, 6, 7,  8,   9}, <br>        {0, 0, 10, 11, 12}, <br>        {0, 0, 0,  13, 14}, <br>        {0, 0, 0,  0,  15}}; <br><br>    int arr2[N*(1+N)/2] = {0}; <br><br>    int i, j, loc = 0; <br><br>    printf("­ì¤Gºû¸ê®Æ¡G\n"); <br>    for(i = 0; i &lt; N; i++) { <br>        for(j = 0; j &lt; N; j++) { <br>            printf("%4d", arr1[i][j]); <br>        } <br>        printf("\n"); <br>    } <br><br>    printf("\n¥H¦C¬°¥D¡G"); <br>    for(i = 0; i &lt; N; i++) { <br>        for(j = 0; j &lt; N; j++) { <br>            if(arr1[i][j] != 0) <br>                arr2[loc++] = arr1[i][j]; <br>        } <br>    } <br>    for(i = 0; i &lt; N*(1+N)/2; i++) <br>        printf("%d ", arr2[i]); <br><br>    printf("\n¿é¤J¯Á¤Ş(i, j)¡G"); <br>    scanf("%d, %d", &amp;i, &amp;j); <br>    loc = N*i - i*(i+1)/2 + j; <br>    printf("(%d, %d) = %d", i, j, arr2[loc]); <br><br>    printf("\n"); <br><br>    return 0; <br>} <br></pre>
+<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br>#define N 5 <br><br>int main(void) { <br>    int arr1[N][N] = { <br>        {1, 2, 3,  4,   5}, <br>        {0, 6, 7,  8,   9}, <br>        {0, 0, 10, 11, 12}, <br>        {0, 0, 0,  13, 14}, <br>        {0, 0, 0,  0,  15}}; <br><br>    int arr2[N*(1+N)/2] = {0}; <br><br>    int i, j, loc = 0; <br><br>    printf("åŸäºŒç¶­è³‡æ–™ï¼š\n"); <br>    for(i = 0; i &lt; N; i++) { <br>        for(j = 0; j &lt; N; j++) { <br>            printf("%4d", arr1[i][j]); <br>        } <br>        printf("\n"); <br>    } <br><br>    printf("\nä»¥åˆ—ç‚ºä¸»ï¼š"); <br>    for(i = 0; i &lt; N; i++) { <br>        for(j = 0; j &lt; N; j++) { <br>            if(arr1[i][j] != 0) <br>                arr2[loc++] = arr1[i][j]; <br>        } <br>    } <br>    for(i = 0; i &lt; N*(1+N)/2; i++) <br>        printf("%d ", arr2[i]); <br><br>    printf("\nè¼¸å…¥ç´¢å¼•(i, j)ï¼š"); <br>    scanf("%d, %d", &amp;i, &amp;j); <br>    loc = N*i - i*(i+1)/2 + j; <br>    printf("(%d, %d) = %d", i, j, arr2[loc]); <br><br>    printf("\n"); <br><br>    return 0; <br>} <br></pre>
 
 
 <br>
