--- a/AlgorithmGossip/ThreeColorsFlags.htm
+++ b/AlgorithmGossip/ThreeColorsFlags.htm
@@ -27,7 +27,7 @@
   
   
   
-  <meta content="text/html; charset=Big5" http-equiv="content-type">
+  <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 
 
 
@@ -36,7 +36,7 @@
   
   
   
-  <title>¤T¦â´Ñ</title>
+  <title>ä¸‰è‰²æ£‹</title>
 </head>
 
 
@@ -51,54 +51,54 @@ Gossip@caterpillar</a></h3>
 
 
 
-<h1><a href="AlgorithmGossip.htm">Algorithm Gossip: ¤T¦â´Ñ</a></h1>
+<h1><a href="AlgorithmGossip.htm">Algorithm Gossip: ä¸‰è‰²æ£‹</a></h1>
 
 
 
 
-<h2>&nbsp;»¡©ú</h2>
+<h2>&nbsp;èªªæ˜</h2>
 
-¤T¦âºXªº°İÃD³Ì¦­¥ÑE.W.Dijkstra©Ò´£¥X¡A¥L©Ò¨Ï¥Îªº¥Î»y¬°Dutch Nation Flag(Dijkstra¬°²üÄõ¤H)¡A¦Ó¦h¼Æªº§@ªÌ«h¨Ï¥ÎThree-Color Flag¨ÓºÙ¤§¡C<br>
+ä¸‰è‰²æ——çš„å•é¡Œæœ€æ—©ç”±E.W.Dijkstraæ‰€æå‡ºï¼Œä»–æ‰€ä½¿ç”¨çš„ç”¨èªç‚ºDutch Nation Flag(Dijkstraç‚ºè·è˜­äºº)ï¼Œè€Œå¤šæ•¸çš„ä½œè€…å‰‡ä½¿ç”¨Three-Color Flagä¾†ç¨±ä¹‹ã€‚<br>
 
 <br>
 
-°²³]¦³¤@±øÃ·¤l¡A¤W­±¦³¬õ¡B¥Õ¡BÂÅ¤TºØÃC¦âªººX¤l¡A°_ªìÃ·¤l¤WªººX¤lÃC¦â¨Ã¨S¦³¶¶§Ç¡A±z§Æ±æ±N¤§¤ÀÃş¡A¨Ã±Æ¦C¬°ÂÅ¡B¥Õ¡B¬õªº¶¶§Ç¡A­n¦p¦ó²¾°Ê¦¸¼Æ¤~·|³Ì¤Ö¡Aª`·N±z¥u¯à¦bÃ·¤l¤W¶i¦æ³o­Ó°Ê§@¡A¦Ó¥B¤@¦¸¥u¯à½Õ´«¨â­ÓºX¤l¡C<br>
+å‡è¨­æœ‰ä¸€æ¢ç¹©å­ï¼Œä¸Šé¢æœ‰ç´…ã€ç™½ã€è—ä¸‰ç¨®é¡è‰²çš„æ——å­ï¼Œèµ·åˆç¹©å­ä¸Šçš„æ——å­é¡è‰²ä¸¦æ²’æœ‰é †åºï¼Œæ‚¨å¸Œæœ›å°‡ä¹‹åˆ†é¡ï¼Œä¸¦æ’åˆ—ç‚ºè—ã€ç™½ã€ç´…çš„é †åºï¼Œè¦å¦‚ä½•ç§»å‹•æ¬¡æ•¸æ‰æœƒæœ€å°‘ï¼Œæ³¨æ„æ‚¨åªèƒ½åœ¨ç¹©å­ä¸Šé€²è¡Œé€™å€‹å‹•ä½œï¼Œè€Œä¸”ä¸€æ¬¡åªèƒ½èª¿æ›å…©å€‹æ——å­ã€‚<br>
 
-<h2>¸Ñªk</h2>
+<h2>è§£æ³•</h2>
 
-¦b¤@±øÃ·¤l¤W²¾°Ê¡A¦bµ{¦¡¤¤¤]´N·N¨ı¥u¯à¨Ï¥Î¤@­Ó°}¦C¡A¦Ó¤£¨Ï¥Î¨ä¥¦ªº°}¦C¨Ó§@»²§U¡A°İÃDªº¸Ñªk«ÜÂ²³æ¡A±z¥i¥H¦Û¤v·Q¹³¤@¤U¦b²¾°ÊºX¤l¡A±qÃ·¤l¶}ÀY¶i¦æ¡A¹J¨ìÂÅ¦â©¹«e²¾¡A¹J¨ì¥Õ¦â¯d¦b¤¤¶¡¡A¹J¨ì¬õ¦â©¹«á²¾¡A¦p¤U©Ò¥Ü¡G <br>
-
-
+åœ¨ä¸€æ¢ç¹©å­ä¸Šç§»å‹•ï¼Œåœ¨ç¨‹å¼ä¸­ä¹Ÿå°±æ„å‘³åªèƒ½ä½¿ç”¨ä¸€å€‹é™£åˆ—ï¼Œè€Œä¸ä½¿ç”¨å…¶å®ƒçš„é™£åˆ—ä¾†ä½œè¼”åŠ©ï¼Œå•é¡Œçš„è§£æ³•å¾ˆç°¡å–®ï¼Œæ‚¨å¯ä»¥è‡ªå·±æƒ³åƒä¸€ä¸‹åœ¨ç§»å‹•æ——å­ï¼Œå¾ç¹©å­é–‹é ­é€²è¡Œï¼Œé‡åˆ°è—è‰²å¾€å‰ç§»ï¼Œé‡åˆ°ç™½è‰²ç•™åœ¨ä¸­é–“ï¼Œé‡åˆ°ç´…è‰²å¾€å¾Œç§»ï¼Œå¦‚ä¸‹æ‰€ç¤ºï¼š <br>
 
 
-<div style="text-align: center;"><img style="width: 504px; height: 208px;" alt="¤T¦âºX" title="¤T¦âºX" src="images/threeColorsFlags-1.jpg"><br>
+
+
+<div style="text-align: center;"><img style="width: 504px; height: 208px;" alt="ä¸‰è‰²æ——" title="ä¸‰è‰²æ——" src="images/threeColorsFlags-1.jpg"><br>
 
 </div>
 
 
 
 
-¥u¬O­nÅı²¾°Ê¦¸¼Æ³Ì¤Öªº¸Ü¡A´N­n¦³¨Ç§Ş¥©¡G<br>
+åªæ˜¯è¦è®“ç§»å‹•æ¬¡æ•¸æœ€å°‘çš„è©±ï¼Œå°±è¦æœ‰äº›æŠ€å·§ï¼š<br>
 
 <ol>
 
-  <li>¦pªG¹Ï¤¤W©Ò¦bªº¦ì¸m¬°¥Õ¦â¡A«hW+1¡Aªí¥Ü¥¼³B²zªº³¡¥÷²¾¦Ü¦Ü¥Õ¦â¸s²Õ¡C</li>
+  <li>å¦‚æœåœ–ä¸­Wæ‰€åœ¨çš„ä½ç½®ç‚ºç™½è‰²ï¼Œå‰‡W+1ï¼Œè¡¨ç¤ºæœªè™•ç†çš„éƒ¨ä»½ç§»è‡³è‡³ç™½è‰²ç¾¤çµ„ã€‚</li>
 
-  <li>¦pªGW³¡¥÷¬°ÂÅ¦â¡A«hB»PWªº¤¸¯À¹ï½Õ¡A¦ÓB»PW¥²¶·¦U+1¡Aªí¥Ü¨â­Ó¸s²Õ³£¦h¤F¤@­Ó¤¸¯À¡C</li>
+  <li>å¦‚æœWéƒ¨ä»½ç‚ºè—è‰²ï¼Œå‰‡Bèˆ‡Wçš„å…ƒç´ å°èª¿ï¼Œè€ŒBèˆ‡Wå¿…é ˆå„+1ï¼Œè¡¨ç¤ºå…©å€‹ç¾¤çµ„éƒ½å¤šäº†ä¸€å€‹å…ƒç´ ã€‚</li>
 
-  <li>¦pªGW©Ò¦bªº¦ì¸m¬O¬õ¦â¡A«h±NW»PR¥æ´«¡A¦ıR­n´î1¡Aªí¥Ü¥¼³B²zªº³¡¥÷´î1¡C</li>
+  <li>å¦‚æœWæ‰€åœ¨çš„ä½ç½®æ˜¯ç´…è‰²ï¼Œå‰‡å°‡Wèˆ‡Räº¤æ›ï¼Œä½†Rè¦æ¸›1ï¼Œè¡¨ç¤ºæœªè™•ç†çš„éƒ¨ä»½æ¸›1ã€‚</li>
 
 </ol>
 
 <br>
 
-ª`·NB¡BW¡BR¨Ã¤£¬O¤T¦âºXªº­Ó¼Æ¡A¥¦­Ì¥u¬O¤@­Ó²¾°Êªº«ü¼Ğ¡F¤°»ò®É­Ô²¾°Êµ²§ô©O¡H¤@¶}©l®É¥¼³B²zªºR«ü¼Ğ·|¬Oµ¥©óºX¤lªºÁ`¼Æ¡A·íRªº¯Á¤Ş¼Æ´î¦Ü¤Ö©óWªº¯Á¤Ş¼Æ®É¡Aªí¥Ü±µ¤U¨ÓªººX¤l´N³£¬O¬õ¦â¤F¡A¦¹®É´N¥i¥Hµ²§ô²¾°Ê¡A¦p¤U©Ò¥Ü¡G <br>
+æ³¨æ„Bã€Wã€Rä¸¦ä¸æ˜¯ä¸‰è‰²æ——çš„å€‹æ•¸ï¼Œå®ƒå€‘åªæ˜¯ä¸€å€‹ç§»å‹•çš„æŒ‡æ¨™ï¼›ä»€éº¼æ™‚å€™ç§»å‹•çµæŸå‘¢ï¼Ÿä¸€é–‹å§‹æ™‚æœªè™•ç†çš„RæŒ‡æ¨™æœƒæ˜¯ç­‰æ–¼æ——å­çš„ç¸½æ•¸ï¼Œç•¶Rçš„ç´¢å¼•æ•¸æ¸›è‡³å°‘æ–¼Wçš„ç´¢å¼•æ•¸æ™‚ï¼Œè¡¨ç¤ºæ¥ä¸‹ä¾†çš„æ——å­å°±éƒ½æ˜¯ç´…è‰²äº†ï¼Œæ­¤æ™‚å°±å¯ä»¥çµæŸç§»å‹•ï¼Œå¦‚ä¸‹æ‰€ç¤ºï¼š <br>
 
-<div style="text-align: center;"><img style="width: 502px; height: 236px;" alt="¤T¦âºX" title="¤T¦âºX" src="images/threeColorsFlags-2.jpg"></div>
+<div style="text-align: center;"><img style="width: 502px; height: 236px;" alt="ä¸‰è‰²æ——" title="ä¸‰è‰²æ——" src="images/threeColorsFlags-2.jpg"></div>
 
 <br>
 
-<h2> ºtºâªk</h2>
+<h2> æ¼”ç®—æ³•</h2>
 
 
 <br>
@@ -108,7 +108,7 @@ Gossip@caterpillar</a></h3>
 
 
 
-<h2> ¹ê§@</h2>
+<h2> å¯¦ä½œ</h2>
 
 
 
@@ -134,7 +134,7 @@ Gossip@caterpillar</a></h3>
 </ul>
 
 
-<pre>import java.io.*;<br><br>public class ThreeColorsFlags {<br>    private void swap(char[] flags, int x, int y) {<br>        char temp;<br>        temp = flags[x];<br>        flags[x] = flags[y];<br>        flags[y] = temp;<br>    }<br>    <br>    public String move(char[] flags) {<br>        int wFlag = 0;<br>        int bFlag = 0;<br>        int rFlag = flags.length - 1;<br>    <br>        while(wFlag &lt;= rFlag) {<br>            if(flags[wFlag] == 'W') {<br>                wFlag++;<br>            }<br>            else if(flags[wFlag] == 'B') {<br>                swap(flags, bFlag, wFlag);<br>                bFlag++;<br>                wFlag++;<br>            }<br>            else {<br>                while(wFlag &lt; rFlag &amp;&amp; flags[rFlag] == 'R')<br>                    rFlag--;<br>                swap(flags, rFlag, wFlag);<br>                rFlag--;                <br>            }<br>        }<br>        <br>        return new String(flags);<br>    }<br>    <br>    public static void main(String[] args) <br>                                throws IOException {        <br>        BufferedReader buf; <br>        buf = new BufferedReader(<br>                    new InputStreamReader(System.in)); <br><br>        System.out.print("¿é¤J¤T¦â´Ñ¶¶§Ç¡]ex. RWBBWRWR¡^¡G");<br>        String flags = buf.readLine();<br>        <br>        ThreeColorsFlags threeColorsFlag = new ThreeColorsFlags();<br>        flags = threeColorsFlag.move(<br>                   flags.toUpperCase().toCharArray());<br>        <br>        System.out.println("²¾°Ê¶¶§Ç«á¡G" + flags);        <br>    }<br>}</pre>
+<pre>import java.io.*;<br><br>public class ThreeColorsFlags {<br>    private void swap(char[] flags, int x, int y) {<br>        char temp;<br>        temp = flags[x];<br>        flags[x] = flags[y];<br>        flags[y] = temp;<br>    }<br>    <br>    public String move(char[] flags) {<br>        int wFlag = 0;<br>        int bFlag = 0;<br>        int rFlag = flags.length - 1;<br>    <br>        while(wFlag &lt;= rFlag) {<br>            if(flags[wFlag] == 'W') {<br>                wFlag++;<br>            }<br>            else if(flags[wFlag] == 'B') {<br>                swap(flags, bFlag, wFlag);<br>                bFlag++;<br>                wFlag++;<br>            }<br>            else {<br>                while(wFlag &lt; rFlag &amp;&amp; flags[rFlag] == 'R')<br>                    rFlag--;<br>                swap(flags, rFlag, wFlag);<br>                rFlag--;                <br>            }<br>        }<br>        <br>        return new String(flags);<br>    }<br>    <br>    public static void main(String[] args) <br>                                throws IOException {        <br>        BufferedReader buf; <br>        buf = new BufferedReader(<br>                    new InputStreamReader(System.in)); <br><br>        System.out.print("è¼¸å…¥ä¸‰è‰²æ£‹é †åºï¼ˆex. RWBBWRWRï¼‰ï¼š");<br>        String flags = buf.readLine();<br>        <br>        ThreeColorsFlags threeColorsFlag = new ThreeColorsFlags();<br>        flags = threeColorsFlag.move(<br>                   flags.toUpperCase().toCharArray());<br>        <br>        System.out.println("ç§»å‹•é †åºå¾Œï¼š" + flags);        <br>    }<br>}</pre>
 
 <br>
 
