--- a/AlgorithmGossip/StackByObject.htm
+++ b/AlgorithmGossip/StackByObject.htm
@@ -33,7 +33,7 @@
   
   
   
-  <meta content="text/html; charset=Big5" http-equiv="content-type">
+  <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 
 
 
@@ -44,7 +44,7 @@
   
   
   
-  <title>°ïÅ| - ¨Ï¥Î Java §@ª«¥ó«Ê¸Ë</title>
+  <title>å †ç–Š - ä½¿ç”¨ Java ä½œç‰©ä»¶å°è£</title>
 </head>
 
 
@@ -61,35 +61,35 @@ Gossip@caterpillar</a></h3>
 
 
 
-<h1><a href="AlgorithmGossip.htm">Algorithm Gossip:&nbsp;°ïÅ| - ¨Ï¥Î Java §@ª«¥ó«Ê¸Ë</a></h1>
+<h1><a href="AlgorithmGossip.htm">Algorithm Gossip:&nbsp;å †ç–Š - ä½¿ç”¨ Java ä½œç‰©ä»¶å°è£</a></h1>
 
 
 
 
 
-<h2>»¡©ú</h2>
+<h2>èªªæ˜</h2>
 
-¦pªG±z¨Ï¥ÎC++©ÎJavaµ¥¤ä´©ª«¥ó¾É¦Vªº»y¨¥¨Ó¹ê§@°ïÅ|¡A±z¥i¥H¨Ï¥ÎÃş§Oªº¤è¦¡¨Ó¥]¬A°ïÅ|ªº¥\¯à¡A±N©Ò¦³ªº°ïÅ|¾Ş§@¥Ñ°ïÅ|ª«¥ó¨Ó³B²z¡A¤@¥¹¥]¸Ë§¹¦¨¡A«h¨Ï¥Î°ïÅ|ª«¥óªº®É­Ô¡A¥u­n©I¥s¥[¤J¡B§R°£µ¥¤èªk¡A¦ÓµL»İ³B²z°ïÅ|ªºtop©Î§PÂ_¬O§_¬°ªÅµ¥²Ó¸`¡C<br>
+å¦‚æœæ‚¨ä½¿ç”¨C++æˆ–Javaç­‰æ”¯æ´ç‰©ä»¶å°å‘çš„èªè¨€ä¾†å¯¦ä½œå †ç–Šï¼Œæ‚¨å¯ä»¥ä½¿ç”¨é¡åˆ¥çš„æ–¹å¼ä¾†åŒ…æ‹¬å †ç–Šçš„åŠŸèƒ½ï¼Œå°‡æ‰€æœ‰çš„å †ç–Šæ“ä½œç”±å †ç–Šç‰©ä»¶ä¾†è™•ç†ï¼Œä¸€æ—¦åŒ…è£å®Œæˆï¼Œå‰‡ä½¿ç”¨å †ç–Šç‰©ä»¶çš„æ™‚å€™ï¼Œåªè¦å‘¼å«åŠ å…¥ã€åˆªé™¤ç­‰æ–¹æ³•ï¼Œè€Œç„¡éœ€è™•ç†å †ç–Šçš„topæˆ–åˆ¤æ–·æ˜¯å¦ç‚ºç©ºç­‰ç´°ç¯€ã€‚<br>
 
-<h2>¸Ñªk</h2>
+<h2>è§£æ³•</h2>
 
-¨Ï¥ÎC++»P¨Ï¥ÎJava¨Ó§@Ãş§O¥]¸Ë¨ä¹ê¬OÃş¦üªº¡A¦b³oÃä§Ú­Ì¨Ï¥ÎJava¹ê§@¡A¦]¬°¥¦ªº»yªk¬İ¨Ó¸ûÂ²¼ä¡FJavaÁöµM¨S¦³«ü¼Ğ¡A¦ı¥i¥H¨Ï¥Î°Ñ¦Ò¡]Reference¡^¨Ó¹F¨ìÃìµ²ªº®ÄªG¡A¤@­Ó¸`ÂIªºÃş§O¥]¸Ë¤è¦¡¦p¤U¡G<br>
+ä½¿ç”¨C++èˆ‡ä½¿ç”¨Javaä¾†ä½œé¡åˆ¥åŒ…è£å…¶å¯¦æ˜¯é¡ä¼¼çš„ï¼Œåœ¨é€™é‚Šæˆ‘å€‘ä½¿ç”¨Javaå¯¦ä½œï¼Œå› ç‚ºå®ƒçš„èªæ³•çœ‹ä¾†è¼ƒç°¡æ½”ï¼›Javaé›–ç„¶æ²’æœ‰æŒ‡æ¨™ï¼Œä½†å¯ä»¥ä½¿ç”¨åƒè€ƒï¼ˆReferenceï¼‰ä¾†é”åˆ°éˆçµçš„æ•ˆæœï¼Œä¸€å€‹ç¯€é»çš„é¡åˆ¥åŒ…è£æ–¹å¼å¦‚ä¸‹ï¼š<br>
 
 <div style="margin-left: 40px;"><span style="font-weight: bold; font-family: Courier New,Courier,monospace;">class Node { </span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
 
-<span style="font-weight: bold; font-family: Courier New,Courier,monospace;">&nbsp;&nbsp;&nbsp; private int data;&nbsp;&nbsp; // ¸`ÂI¸ê®Æ </span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
+<span style="font-weight: bold; font-family: Courier New,Courier,monospace;">&nbsp;&nbsp;&nbsp; private int data;&nbsp;&nbsp; // ç¯€é»è³‡æ–™ </span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
 
-<span style="font-weight: bold; font-family: Courier New,Courier,monospace;">&nbsp;&nbsp;&nbsp; private Node next;&nbsp; // ¤U¤@­Ó¸`ÂI¦ì¸m </span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
+<span style="font-weight: bold; font-family: Courier New,Courier,monospace;">&nbsp;&nbsp;&nbsp; private Node next;&nbsp; // ä¸‹ä¸€å€‹ç¯€é»ä½ç½® </span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
 
 <br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
 
-<span style="font-weight: bold; font-family: Courier New,Courier,monospace;">&nbsp;&nbsp;&nbsp; public void setData(int data);&nbsp; // ¸`ÂI¸ê®Æ </span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
+<span style="font-weight: bold; font-family: Courier New,Courier,monospace;">&nbsp;&nbsp;&nbsp; public void setData(int data);&nbsp; // ç¯€é»è³‡æ–™ </span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
 
-<span style="font-weight: bold; font-family: Courier New,Courier,monospace;">&nbsp;&nbsp;&nbsp; public void setNext(Node next);&nbsp; // ¤U¤@­Ó¸`ÂI¦ì¸m </span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
+<span style="font-weight: bold; font-family: Courier New,Courier,monospace;">&nbsp;&nbsp;&nbsp; public void setNext(Node next);&nbsp; // ä¸‹ä¸€å€‹ç¯€é»ä½ç½® </span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
 
-<span style="font-weight: bold; font-family: Courier New,Courier,monospace;">&nbsp;&nbsp;&nbsp; public int getData();&nbsp; // ¶Ç¦^¸`ÂI¸ê®Æ </span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
+<span style="font-weight: bold; font-family: Courier New,Courier,monospace;">&nbsp;&nbsp;&nbsp; public int getData();&nbsp; // å‚³å›ç¯€é»è³‡æ–™ </span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
 
-<span style="font-weight: bold; font-family: Courier New,Courier,monospace;">&nbsp;&nbsp;&nbsp; public Node getNext();&nbsp; // ¶Ç¦^¤U¤@­Ó¸`ÂI¦ì¸m </span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
+<span style="font-weight: bold; font-family: Courier New,Courier,monospace;">&nbsp;&nbsp;&nbsp; public Node getNext();&nbsp; // å‚³å›ä¸‹ä¸€å€‹ç¯€é»ä½ç½® </span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
 
 <span style="font-weight: bold; font-family: Courier New,Courier,monospace;">}</span><br>
 
@@ -97,17 +97,17 @@ Gossip@caterpillar</a></h3>
 
 &nbsp;<br>
 
-¨ä¤¤next¬O­Óª«¥ó°Ñ¦Ò¦WºÙ¡A¥¦¥i¥H¥Î¨Ó°Ñ¦Ò¦Ü¡]«ü¦V¡^¤U¤@­Ó¸`ÂIª«¥óªº°O¾ĞÅé¦ì¸m¡A¦Ó°ïÅ|Ãş§O¥i¥H¦p¤U¥]¸Ë¡G<br>
+å…¶ä¸­nextæ˜¯å€‹ç‰©ä»¶åƒè€ƒåç¨±ï¼Œå®ƒå¯ä»¥ç”¨ä¾†åƒè€ƒè‡³ï¼ˆæŒ‡å‘ï¼‰ä¸‹ä¸€å€‹ç¯€é»ç‰©ä»¶çš„è¨˜æ†¶é«”ä½ç½®ï¼Œè€Œå †ç–Šé¡åˆ¥å¯ä»¥å¦‚ä¸‹åŒ…è£ï¼š<br>
 
 <div style="margin-left: 40px;"><span style="font-weight: bold; font-family: Courier New,Courier,monospace;">class Stack { </span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
 
-<span style="font-weight: bold; font-family: Courier New,Courier,monospace;">&nbsp;&nbsp;&nbsp; private Node top;&nbsp;&nbsp;&nbsp; // °ïÅ|³»ºİ </span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
+<span style="font-weight: bold; font-family: Courier New,Courier,monospace;">&nbsp;&nbsp;&nbsp; private Node top;&nbsp;&nbsp;&nbsp; // å †ç–Šé ‚ç«¯ </span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
 
-<span style="font-weight: bold; font-family: Courier New,Courier,monospace;">&nbsp;&nbsp;&nbsp; private String name;&nbsp; // ¥u¬O­Ó¦WºÙ </span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
+<span style="font-weight: bold; font-family: Courier New,Courier,monospace;">&nbsp;&nbsp;&nbsp; private String name;&nbsp; // åªæ˜¯å€‹åç¨± </span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
 
 <br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
 
-<span style="font-weight: bold; font-family: Courier New,Courier,monospace;">&nbsp;&nbsp;&nbsp; // §Q¥Î«Øºc¤l«Ø¥ß°ïÅ| </span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
+<span style="font-weight: bold; font-family: Courier New,Courier,monospace;">&nbsp;&nbsp;&nbsp; // åˆ©ç”¨å»ºæ§‹å­å»ºç«‹å †ç–Š </span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
 
 <span style="font-weight: bold; font-family: Courier New,Courier,monospace;">&nbsp;&nbsp;&nbsp; public Stack(); </span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
 
@@ -115,25 +115,25 @@ Gossip@caterpillar</a></h3>
 
 <br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
 
-<span style="font-weight: bold; font-family: Courier New,Courier,monospace;">&nbsp;&nbsp;&nbsp; // ´¡¤J¸ê®Æ¦Ü³»ºİ </span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
+<span style="font-weight: bold; font-family: Courier New,Courier,monospace;">&nbsp;&nbsp;&nbsp; // æ’å…¥è³‡æ–™è‡³é ‚ç«¯ </span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
 
 <span style="font-weight: bold; font-family: Courier New,Courier,monospace;">&nbsp;&nbsp;&nbsp; public void add(int data); </span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
 
 <br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
 
-<span style="font-weight: bold; font-family: Courier New,Courier,monospace;">&nbsp;&nbsp;&nbsp; // ¶Ç¦^³»ºİ¸ê®Æ </span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
+<span style="font-weight: bold; font-family: Courier New,Courier,monospace;">&nbsp;&nbsp;&nbsp; // å‚³å›é ‚ç«¯è³‡æ–™ </span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
 
 <span style="font-weight: bold; font-family: Courier New,Courier,monospace;">&nbsp;&nbsp;&nbsp; public int printTop(); </span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
 
 <br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
 
-<span style="font-weight: bold; font-family: Courier New,Courier,monospace;">&nbsp;&nbsp;&nbsp; // §R°£³»ºİ¸ê®Æ </span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
+<span style="font-weight: bold; font-family: Courier New,Courier,monospace;">&nbsp;&nbsp;&nbsp; // åˆªé™¤é ‚ç«¯è³‡æ–™ </span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
 
 <span style="font-weight: bold; font-family: Courier New,Courier,monospace;">&nbsp;&nbsp;&nbsp; public void del(); </span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
 
 <br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
 
-<span style="font-weight: bold; font-family: Courier New,Courier,monospace;">&nbsp;&nbsp;&nbsp; // ¦C¥X°ïÅ|¤º®e </span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
+<span style="font-weight: bold; font-family: Courier New,Courier,monospace;">&nbsp;&nbsp;&nbsp; // åˆ—å‡ºå †ç–Šå…§å®¹ </span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
 
 <span style="font-weight: bold; font-family: Courier New,Courier,monospace;">&nbsp;&nbsp;&nbsp; public void list(); </span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
 
@@ -143,12 +143,12 @@ Gossip@caterpillar</a></h3>
 
 &nbsp;<br>
 
-§Q¥Îª«¥ó¾É¦V¨Ó¥]¸Ë¸ê®Æµ²ºc¡AÁöµM¦b³]­p®É»İ­nªá¸û¦hªº¤ß«ä¡A¦ı³]­p§¹¦¨¤§«á¡A¤é«á©I¥s¨Ï¥Î´NÂ²³æ¤F¡A¥H«á±z¥u­nª`·N¥Dµ{¦¡ªºÅŞ¿è³]­p´N¥i¥H¤F¡C<br>
+åˆ©ç”¨ç‰©ä»¶å°å‘ä¾†åŒ…è£è³‡æ–™çµæ§‹ï¼Œé›–ç„¶åœ¨è¨­è¨ˆæ™‚éœ€è¦èŠ±è¼ƒå¤šçš„å¿ƒæ€ï¼Œä½†è¨­è¨ˆå®Œæˆä¹‹å¾Œï¼Œæ—¥å¾Œå‘¼å«ä½¿ç”¨å°±ç°¡å–®äº†ï¼Œä»¥å¾Œæ‚¨åªè¦æ³¨æ„ä¸»ç¨‹å¼çš„é‚è¼¯è¨­è¨ˆå°±å¯ä»¥äº†ã€‚<br>
 
 
 <br>
 
-<h2> ¹ê§@</h2>
+<h2> å¯¦ä½œ</h2>
 
 
 <ul>
@@ -159,7 +159,7 @@ Gossip@caterpillar</a></h3>
 </ul>
 
 
-<pre>import java.io.*; <br><br>// ¸`ÂI <br>class Node { <br>    private int data;   // ¸`ÂI¸ê®Æ <br>    private Node next;  // ¤U¤@­Ó¸`ÂI¦ì¸m <br><br>    public void setData(int data) {  // ¸`ÂI¸ê®Æ <br>        this.data = data; <br>    } <br><br>    public void setNext(Node next) {  // ¤U¤@­Ó¸`ÂI¦ì¸m <br>        this.next = next; <br>    } <br><br>    public int getData() {  // ¶Ç¦^¸`ÂI¸ê®Æ <br>        return data; <br>    } <br><br>    public Node getNext() {  // ¶Ç¦^¤U¤@­Ó¸`ÂI¦ì¸m <br>        return next; <br>    } <br>} <br><br>// °ïÅ| <br>class Stack { <br>    private Node top; <br>    private String name;  // ¥u¬O­Ó¦WºÙ <br><br>    public Stack() { <br>        this("list"); <br>    } <br><br>    // §Q¥Î«Øºc¤l«Ø¥ß°ïÅ| <br>    public Stack(String name) { <br>        this.name = name; <br>        top = null; <br>    } <br><br>    // ´¡¤J¸ê®Æ¦Ü³»ºİ <br>    public void add(int data) { <br>        Node newNode = new Node(); <br>        newNode.setData(data); <br>        newNode.setNext(top); <br>        top = newNode; <br>    } <br><br>    // ¶Ç¦^³»ºİ¸ê®Æ <br>    public int printTop() { <br>        return top.getData(); <br>    } <br><br>    // §R°£³»ºİ¸ê®Æ <br>    public void del() { <br>        Node tmpNode; <br>        tmpNode = top; <br><br>        if(tmpNode == null) { <br>            System.out.println("\n°ïÅ|¤wªÅ¡I"); <br>            return; <br>        } <br><br>        top = top.getNext(); <br>        tmpNode = null; <br>    } <br><br>    // ¦C¥X°ïÅ|¤º®e <br>    public void list() { <br>        Node tmpNode; <br>        tmpNode = top; <br><br>        System.out.print("\n°ïÅ|¤º®e¡G"); <br>        while(tmpNode != null) { <br>            System.out.print(tmpNode.getData() + " "); <br>            tmpNode = tmpNode.getNext(); <br>        } <br>    } <br>} <br><br>public class StackShow { <br>    public static void main(String[] args) <br>                                  throws IOException { <br>        int input, select; <br>        BufferedReader buf; <br>        buf = new BufferedReader(<br>                       new InputStreamReader(System.in)); <br><br>        Stack s1 = new Stack("°ïÅ|´ú¸Õ"); <br><br>        while(true) {  <br>            System.out.print("\n\n½Ğ¿é¤J¿ï¶µ(-1µ²§ô)¡G"); <br>            System.out.print("\n(1)´¡¤J­È¦Ü°ïÅ|"); <br>            System.out.print("\n(2)Åã¥Ü°ïÅ|³»ºİ"); <br>            System.out.print("\n(3)§R°£³»ºİ­È"); <br>            System.out.print("\n(4)Åã¥Ü©Ò¦³¤º®e"); <br>            System.out.print("\n$c&gt;"); <br><br>            select = Integer.parseInt(buf.readLine()); <br><br>            if(select == -1) <br>                break; <br><br>            switch(select) { <br>                case 1: <br>                    System.out.print("\n¿é¤J­È¡G"); <br>                    input = Integer.parseInt(buf.readLine()); <br>                    s1.add(input); <br>                    break; <br>                case 2: <br>                    System.out.print("\n³»ºİ­È¡G" +  <br>                                             s1.printTop()); <br>                    break; <br>                case 3: <br>                    s1.del(); <br>                    break; <br>                case 4: <br>                    s1.list(); <br>                    break; <br>                default: <br>                    System.out.print("\n¿ï¶µ¿ù»~¡I"); <br>            } <br>        } <br><br>        System.out.println(""); <br>    } <br>}</pre>
+<pre>import java.io.*; <br><br>// ç¯€é» <br>class Node { <br>    private int data;   // ç¯€é»è³‡æ–™ <br>    private Node next;  // ä¸‹ä¸€å€‹ç¯€é»ä½ç½® <br><br>    public void setData(int data) {  // ç¯€é»è³‡æ–™ <br>        this.data = data; <br>    } <br><br>    public void setNext(Node next) {  // ä¸‹ä¸€å€‹ç¯€é»ä½ç½® <br>        this.next = next; <br>    } <br><br>    public int getData() {  // å‚³å›ç¯€é»è³‡æ–™ <br>        return data; <br>    } <br><br>    public Node getNext() {  // å‚³å›ä¸‹ä¸€å€‹ç¯€é»ä½ç½® <br>        return next; <br>    } <br>} <br><br>// å †ç–Š <br>class Stack { <br>    private Node top; <br>    private String name;  // åªæ˜¯å€‹åç¨± <br><br>    public Stack() { <br>        this("list"); <br>    } <br><br>    // åˆ©ç”¨å»ºæ§‹å­å»ºç«‹å †ç–Š <br>    public Stack(String name) { <br>        this.name = name; <br>        top = null; <br>    } <br><br>    // æ’å…¥è³‡æ–™è‡³é ‚ç«¯ <br>    public void add(int data) { <br>        Node newNode = new Node(); <br>        newNode.setData(data); <br>        newNode.setNext(top); <br>        top = newNode; <br>    } <br><br>    // å‚³å›é ‚ç«¯è³‡æ–™ <br>    public int printTop() { <br>        return top.getData(); <br>    } <br><br>    // åˆªé™¤é ‚ç«¯è³‡æ–™ <br>    public void del() { <br>        Node tmpNode; <br>        tmpNode = top; <br><br>        if(tmpNode == null) { <br>            System.out.println("\nå †ç–Šå·²ç©ºï¼"); <br>            return; <br>        } <br><br>        top = top.getNext(); <br>        tmpNode = null; <br>    } <br><br>    // åˆ—å‡ºå †ç–Šå…§å®¹ <br>    public void list() { <br>        Node tmpNode; <br>        tmpNode = top; <br><br>        System.out.print("\nå †ç–Šå…§å®¹ï¼š"); <br>        while(tmpNode != null) { <br>            System.out.print(tmpNode.getData() + " "); <br>            tmpNode = tmpNode.getNext(); <br>        } <br>    } <br>} <br><br>public class StackShow { <br>    public static void main(String[] args) <br>                                  throws IOException { <br>        int input, select; <br>        BufferedReader buf; <br>        buf = new BufferedReader(<br>                       new InputStreamReader(System.in)); <br><br>        Stack s1 = new Stack("å †ç–Šæ¸¬è©¦"); <br><br>        while(true) {  <br>            System.out.print("\n\nè«‹è¼¸å…¥é¸é …(-1çµæŸ)ï¼š"); <br>            System.out.print("\n(1)æ’å…¥å€¼è‡³å †ç–Š"); <br>            System.out.print("\n(2)é¡¯ç¤ºå †ç–Šé ‚ç«¯"); <br>            System.out.print("\n(3)åˆªé™¤é ‚ç«¯å€¼"); <br>            System.out.print("\n(4)é¡¯ç¤ºæ‰€æœ‰å…§å®¹"); <br>            System.out.print("\n$c&gt;"); <br><br>            select = Integer.parseInt(buf.readLine()); <br><br>            if(select == -1) <br>                break; <br><br>            switch(select) { <br>                case 1: <br>                    System.out.print("\nè¼¸å…¥å€¼ï¼š"); <br>                    input = Integer.parseInt(buf.readLine()); <br>                    s1.add(input); <br>                    break; <br>                case 2: <br>                    System.out.print("\né ‚ç«¯å€¼ï¼š" +  <br>                                             s1.printTop()); <br>                    break; <br>                case 3: <br>                    s1.del(); <br>                    break; <br>                case 4: <br>                    s1.list(); <br>                    break; <br>                default: <br>                    System.out.print("\né¸é …éŒ¯èª¤ï¼"); <br>            } <br>        } <br><br>        System.out.println(""); <br>    } <br>}</pre>
 
 <br>
 
